--- a/index.html
+++ b/index.html
@@ -1,52 +1,40 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Strategic Heroes Oracles</title>
+    <title>SHO Alliance</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
     <header>
-        <div class="logo">
-            <img src="sho-logo.png" alt="SHO Logo">
-        </div>
+        <h1>Welcome to Strategic Heroes Oracles (SHO)</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#alliances">Alliances</a></li>
-                <li><a href="#tournaments">Tournaments</a></li>
-                <li><a href="#news">News</a></li>
-                <li><a href="#youtube">YouTube</a></li>
-                <li><a href="#games">Games</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="alliances.html">Alliances</a></li>
+                <li><a href="tournaments.html">Tournaments</a></li>
+                <li><a href="news.html">News</a></li>
+                <li><a href="recruitment.html">Recruitment</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <section id="home">
-        <h1>Welcome to Strategic Heroes Oracles</h1>
-        <p>Your ultimate destination for gaming alliances, tournaments, and achievements.</p>
+
+    <section id="about">
+        <h2>About SHO</h2>
+        <p>Welcome to the Strategic Heroes Oracles (SHO) Alliance. We are a competitive and strategic gaming community, active in various tournaments and leagues.</p>
     </section>
-    <section id="alliances">
-        <h2>Our Alliances</h2>
-        <p>Details about our alliances will be displayed here.</p>
-    </section>
-    <section id="tournaments">
-        <h2>Ongoing & Upcoming Tournaments</h2>
-        <p>Information about tournaments will be displayed here.</p>
-    </section>
-    <section id="news">
-        <h2>Latest News & Updates</h2>
-        <p>Stay updated with our latest announcements.</p>
-    </section>
+
     <section id="youtube">
-        <h2>YouTube & Media</h2>
-        <p>Watch our latest gameplay videos and highlights.</p>
+        <h2>Latest YouTube Videos</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
     </section>
-    <section id="games">
-        <h2>Games We Play</h2>
-        <p>Details about the games our alliances are part of.</p>
-    </section>
+
     <footer>
-        <p>&copy; 2025 Strategic Heroes Oracles. All rights reserved.</p>
+        <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
     </footer>
+
 </body>
-  </html>
+</html>
