--- a/index.html
+++ b/index.html
@@ -31,7 +31,13 @@
         <h2>Latest YouTube Videos</h2>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
     </section>
-
+<section id="hero">
+    <div class="hero-content">
+        <h1>Welcome to SHO Alliance</h1>
+        <p>Home of the most strategic gaming community!</p>
+        <a href="#about"><button>Learn More</button></a>
+    </div>
+</section>
     <footer>
         <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
     </footer>
