--- a/index.html
+++ b/index.html
@@ -38,6 +38,26 @@
         <a href="#about"><button>Learn More</button></a>
     </div>
 </section>
+    <section id="news">
+    <h2>Latest News & Updates</h2>
+    <div class="news-container">
+        <div class="news-item">
+            <h3>🏆 SHO Tournament 2.0 Begins!</h3>
+            <p>Our biggest tournament is live! Check out the fixtures and results.</p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="news-item">
+            <h3>🔥 New Recruitment Drive</h3>
+            <p>We're looking for top players! Join SHO and be part of an elite squad.</p>
+            <a href="#">Apply Now</a>
+        </div>
+        <div class="news-item">
+            <h3>🚀 Alliance Championship Update</h3>
+            <p>SHO Alliances are dominating the leaderboard! Stay tuned for updates.</p>
+            <a href="#">View Rankings</a>
+        </div>
+    </div>
+    </section>
     <footer>
         <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
     </footer>
