--- a/index.html
+++ b/index.html
@@ -58,6 +58,47 @@
         </div>
     </div>
     </section>
+    <section id="leaderboard">
+    <h2>🏅 SHO Leaderboard</h2>
+    <div class="leaderboard-container">
+        <table>
+            <thead>
+                <tr>
+                    <th>Rank</th>
+                    <th>Team/Player</th>
+                    <th>Wins</th>
+                    <th>Points</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>🥇 1</td>
+                    <td>SHO Vanguards</td>
+                    <td>10</td>
+                    <td>250</td>
+                </tr>
+                <tr>
+                    <td>🥈 2</td>
+                    <td>SHO Enforcers</td>
+                    <td>9</td>
+                    <td>230</td>
+                </tr>
+                <tr>
+                    <td>🥉 3</td>
+                    <td>SHO Outriders</td>
+                    <td>8</td>
+                    <td>210</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>SHO Sentinels</td>
+                    <td>7</td>
+                    <td>200</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+                                </section>
     <footer>
         <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
     </footer>
