--- a/index.html
+++ b/index.html
@@ -99,6 +99,24 @@
         </table>
     </div>
                                 </section>
+
+    <section id="highlights">
+    <h2>🎥 Match Highlights</h2>
+    <div class="highlights-container">
+        <div class="video">
+            <iframe width="100%" height="200" src="https://www.youtube.com/embed/YOUR_VIDEO_ID_1" frameborder="0" allowfullscreen></iframe>
+            <p>🔥 SHO Championship Final - Epic PvP Battle!</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="200" src="https://www.youtube.com/embed/YOUR_VIDEO_ID_2" frameborder="0" allowfullscreen></iframe>
+            <p>💥 Best Clutch Moments in SHO Tournaments!</p>
+        </div>
+        <div class="video">
+            <iframe width="100%" height="200" src="https://www.youtube.com/embed/YOUR_VIDEO_ID_3" frameborder="0" allowfullscreen></iframe>
+            <p>⚡ Insane 6 Sixes in an Over - Record Moment!</p>
+        </div>
+    </div>
+    </section>
     <footer>
         <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
     </footer>
