--- a/index.html
+++ b/index.html
@@ -117,6 +117,29 @@
         </div>
     </div>
     </section>
+
+    <section id="achievements">
+    <h2>🏆 SHO Achievements</h2>
+    <div class="achievements-container">
+        <div class="achievement-card">
+            <img src="images/trophy.png" alt="Champion">
+            <h3>Alliance Championship 2024 🏆</h3>
+            <p>SHO Vanguards secured **1st place** in the Global Championship!</p>
+        </div>
+
+        <div class="achievement-card">
+            <img src="images/medal.png" alt="Top Player">
+            <h3>Top Player of the Year 🥇</h3>
+            <p>SHO Outriders' **Master Blaster** was the highest run scorer in PvP battles!</p>
+        </div>
+
+        <div class="achievement-card">
+            <img src="images/cup.png" alt="Tournament">
+            <h3>SHO Civil War 2.0 🏅</h3>
+            <p>SHO Enforcers dominated the final battle with **10 consecutive wins!**</p>
+        </div>
+    </div>
+    </section>
     <footer>
         <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
     </footer>
