--- a/index.html
+++ b/index.html
@@ -38,6 +38,25 @@
         <a href="#about"><button>Learn More</button></a>
     </div>
 </section>
+<section id="sho-leaders">
+    <h2>🏆 SHO Leadership Team</h2>
+    <div class="leaders-container">
+        <div class="leader-card">
+            <img src="images/founder.png" alt="Founder">
+            <h3>Ayushi (SHO Founder)</h3>
+            <p>🚀 **Created & Built the SHO Legacy**</p>
+            <p>🎯 Strategic Planner, Tournament Organizer</p>
+        </div>
+
+        <div class="leader-card">
+            <img src="images/manager.png" alt="Manager">
+            <h3>Manager Name</h3>
+            <p>🔥 **Managing Events & Recruitment**</p>
+            <p>🏏 Ensuring Smooth Alliance Operations</p>
+        </div>
+    </div>
+</section>
+    
     <section id="news">
     <h2>Latest News & Updates</h2>
     <div class="news-container">
