--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     </section>
 <section id="hero">
     <div class="hero-content">
-        <h1>Welcome to SHO Alliance</h1>
-        <p>Home of the most strategic gaming community!</p>
-        <a href="#about"><button>Learn More</button></a>
+        <h1>Welcome to <span>Strategic Heroes Oracles</span></h1>
+        <p>The Ultimate Gaming Alliance – Dominate, Compete & Rise!</p>
+        <a href="#alliances" class="btn">Explore Alliances</a>
+        <a href="#recruitment" class="btn secondary">Join Us</a>
     </div>
 </section>
 <section id="sho-leaders">
