--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Welcome to Strategic Heroes Oracles (SHO)</h1>
+        <h1>Strategic Heroes Oracles (SHO)</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -21,24 +21,49 @@
             </ul>
         </nav>
     </header>
+<section id="about" class="about-section">
+    <div class="container">
+        <h2>About Strategic Heroes Oracles (SHO)</h2>
+        <p><strong>Strategic Heroes Oracles (SHO)</strong> is a community of elite gamers united by strategy, skill, and teamwork. Founded with a vision to dominate in multiple gaming worlds, SHO has grown into a powerhouse across various competitive games.</p>
+        
+        <h3>Who We Are?</h3>
+        <ul>
+            <li>🔥 A <strong>top-tier alliance</strong> in multiple strategy and esports games.</li>
+            <li>🔥 A community of <strong>passionate gamers, strategists, and champions</strong>.</li>
+            <li>🔥 A home for <strong>friendly competition, tournaments, and exclusive events</strong>.</li>
+        </ul>
 
-    <section id="about">
-        <h2>About SHO</h2>
-        <p>Welcome to the Strategic Heroes Oracles (SHO) Alliance. We are a competitive and strategic gaming community, active in various tournaments and leagues.</p>
-    </section>
+        <h3>What We Do?</h3>
+        <ul>
+            <li>🎮 Compete in <strong>Hitwicket, Free Fire, BGMI, eFootball</strong>, and more.</li>
+            <li>🏆 Host <strong>tournaments, PvP battles, and alliance championships</strong>.</li>
+            <li>📢 Share <strong>game guides, tips, and live gameplay on YouTube</strong>.</li>
+            <li>🚀 Recruit and train <strong>the best players to join our ranks</strong>.</li>
+        </ul>
 
-    <section id="youtube">
-        <h2>Latest YouTube Videos</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
-    </section>
-<section id="hero">
+        <h3>Why Join SHO?</h3>
+        <ul>
+            <li>✔ Be part of a <strong>strong and supportive alliance</strong>.</li>
+            <li>✔ Participate in <strong>exclusive in-game events and challenges</strong>.</li>
+            <li>✔ Get <strong>recognized as one of the best in competitive gaming</strong>.</li>
+        </ul>
+    </div>
+</section>
+     
+    <section id="hero">
     <div class="hero-content">
         <h1>Welcome to <span>Strategic Heroes Oracles</span></h1>
         <p>The Ultimate Gaming Alliance – Dominate, Compete & Rise!</p>
         <a href="#alliances" class="btn">Explore Alliances</a>
         <a href="#recruitment" class="btn secondary">Join Us</a>
     </div>
-</section>
+    </section>
+
+    <section id="youtube">
+        <h2>Latest YouTube Videos</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/YOUR_VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+    </section>
+
 <section id="sho-leaders">
     <h2>🏆 SHO Leadership Team</h2>
     <div class="leaders-container">
