--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Strategic Heroes Oracles (SHO)</h1>
+        <h1 class="sho-heading"><span>Strategic Heroes Oracles</span></h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
