--- a/index.html
+++ b/index.html
@@ -212,7 +212,14 @@
     </div>
     </section>
     <footer>
-        <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
+  <div class="footer-content">
+    <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
+    <div class="social-links">
+      <a href="https://youtube.com/@strategic-hitwickets-oracles" target="_blank">YouTube</a>
+      <a href="https://instagram.com/yourprofile" target="_blank">Instagram</a>
+      <a href="https://discord.gg/yourdiscord" target="_blank">Discord</a>
+    </div>
+  </div>
     </footer>
 
 </body>
