--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
     <div class="hero-content">
         <h1>Welcome to <span>Strategic Heroes Oracles</span></h1>
         <p>The Ultimate Gaming Alliance – Dominate, Compete & Rise!</p>
-        <a href="#alliances" class="btn">Explore Alliances</a>
-        <a href="#recruitment" class="btn secondary">Join Us</a>
+        <a href="alliances.html" class="btn">Explore Alliances</a>
+        <a href="recruitment.html" class="btn secondary">Join Us</a>
     </div>
     </section>
 
