--- a/faq.html
+++ b/faq.html
@@ -15,6 +15,19 @@
 </head>
 <body>
     <header>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="alliances.html">Alliances</a></li>
+            <li><a href="tournaments.html">Tournaments</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="recruitment.html">Recruitment</a></li>
+            <li><a href="faq.html" class="active">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    </header>
+    <header>
         <h1>FAQ - SHO Alliance</h1>
     </header>
     <section class="faq-container">
