--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script src="script.js" defer></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHO Alliance</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Page Loader -->
+<div id="loader">
+    <img src="images/sho-logo.png" alt="SHO Logo" class="loader-logo">
+    <p>Loading...</p>
+</div>
 
     <header>
   <!-- Navigation Container -->
