--- a/index.html
+++ b/index.html
@@ -27,22 +27,25 @@
         <img src="images/sho-logo.png" alt="SHO Logo">
       </div>
 
-      <!-- Hamburger Icon -->
-      <div class="menu-icon" onclick="toggleMenu()">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-
-      <!-- Navigation Links -->
-      <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
-        <li><a href="alliances.html">Alliances</a></li>
-        <li><a href="tournaments.html">Tournaments</a></li>
-        <li><a href="news.html">News</a></li>
-        <li><a href="recruitment.html">Recruitment</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
+      
+    <nav class="navbar">
+        <div class="logo">
+            <a href="index.html">SHO</a>
+        </div>
+        <div class="menu-icon" onclick="toggleMenu()">
+            ☰
+        </div>
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="alliances.html">Alliances</a></li>
+            <li><a href="tournaments.html">Tournaments</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="recruitment.html">Recruitment</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    
     </nav>
   </div>
 </header>
