--- a/alliances.html
+++ b/alliances.html
@@ -1,5 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,36 +6,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
     <header>
-        <h1>Our Alliances</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="alliances.html">Alliances</a></li>
-                <li><a href="tournaments.html">Tournaments</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="recruitment.html">Recruitment</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+        <h1>SHO Alliances – The Powerhouses of Strategy</h1>
+        <p>Explore the elite alliances dominating multiple gaming worlds.</p>
+    </header><section class="alliances-container">
+    <div class="alliance hitwicket">VANGUARDS</div>
+    <div class="alliance hitwicket">ENFORCERS</div>
+    <div class="alliance hitwicket">OUTRIDERS</div>
+    <div class="alliance hitwicket">SENTINELS</div>
+    <div class="alliance hitwicket">PALADINS</div>
+    <div class="alliance hitwicket">CRUSADERS</div>
+    <div class="alliance hitwicket">REVENANTS</div>
+    <div class="alliance hitwicket">INVINCIBLES</div>
+    <div class="alliance freefire">FIREHAWKS</div>
+    <div class="alliance bgmi">WARHOUNDS</div>
+    <div class="alliance efootball">GLADIATORS</div>
+    <div class="alliance coc">MASTERS</div>
+</section>
 
-    <section>
-        <h2>SHO Alliances</h2>
-        <ul>
-            <li><strong>SHO Vanguards</strong> – Focus on elite strategies</li>
-            <li><strong>SHO Enforcers</strong> – Powerful defensive gameplay</li>
-            <li><strong>SHO Outriders</strong> – Tactical gameplay experts</li>
-            <li><strong>SHO Sentinels</strong> – Balanced team with consistent performance</li>
-            <li><strong>SHO Paladins</strong> – Aggressive batting and bowling specialists</li>
-            <li><strong>SHO Crusaders</strong> – Dominating tournaments with expert skills</li>
-        </ul>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
-    </footer>
+<script src="script.js"></script>
 
 </body>
-                                                           </html>
+</html>
