--- a/alliances.html
+++ b/alliances.html
@@ -1,30 +1,79 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SHO Alliances</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Our Alliances</title>
+    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="alliance.css"> <!-- New CSS file for Alliances -->
 </head>
 <body>
-    <header>
-        <h1>SHO Alliances – The Powerhouses of Strategy</h1>
-        <p>Explore the elite alliances dominating multiple gaming worlds.</p>
-    </header><section class="alliances-container">
-    <div class="alliance hitwicket">VANGUARDS</div>
-    <div class="alliance hitwicket">ENFORCERS</div>
-    <div class="alliance hitwicket">OUTRIDERS</div>
-    <div class="alliance hitwicket">SENTINELS</div>
-    <div class="alliance hitwicket">PALADINS</div>
-    <div class="alliance hitwicket">CRUSADERS</div>
-    <div class="alliance hitwicket">REVENANTS</div>
-    <div class="alliance hitwicket">INVINCIBLES</div>
-    <div class="alliance freefire">FIREHAWKS</div>
-    <div class="alliance bgmi">WARHOUNDS</div>
-    <div class="alliance efootball">GLADIATORS</div>
-    <div class="alliance coc">MASTERS</div>
-</section>
 
-<script src="script.js"></script>
+    <header>
+        <h1>Strategic Heroes Alliances</h1>
+    </header>
+
+    <section class="alliance-container">
+        <div class="alliance-card">
+            <h2>VANGUARDS</h2>
+            <p>Elite warriors of strategy and skill.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>ENFORCERS</h2>
+            <p>Defenders of justice and order.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>OUTRIDERS</h2>
+            <p>Fast-striking tactical masterminds.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>SENTINELS</h2>
+            <p>Guardians of power and wisdom.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>PALADINS</h2>
+            <p>Champions of honor and valor.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>CRUSADERS</h2>
+            <p>Fearless warriors of the battlefield.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>REVENANTS</h2>
+            <p>Unstoppable legends of the past.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>INVINCIBLES</h2>
+            <p>Dominating the game with strength.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>FIREHAWKS (Free Fire)</h2>
+            <p>Blazing through battles with precision.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>WARHOUNDS (BGMI)</h2>
+            <p>Masters of survival and combat.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>GLADIATORS (E-Football)</h2>
+            <p>Dominating the field with skill.</p>
+        </div>
+
+        <div class="alliance-card">
+            <h2>MASTERS (COC)</h2>
+            <p>Builders of mighty empires.</p>
+        </div>
+    </section>
 
 </body>
 </html>
