--- a/alliances.html
+++ b/alliances.html
@@ -1,79 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Our Alliances</title>
-    <link rel="stylesheet" href="style.css"> 
-    <link rel="stylesheet" href="alliance.css"> <!-- New CSS file for Alliances -->
+    <title>SHO Alliances</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="alliance.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
 <body>
-
     <header>
-        <h1>Strategic Heroes Alliances</h1>
-    </header>
+        <h1>Strategic Heroes Oracles - Alliances</h1>
+    </header><section class="alliance-container">
+    <h2 class="game-category">🔥 Hitwicket Alliances</h2>
+    <div class="alliance-card"><h3><i class="fas fa-shield-alt"></i> VANGUARDS</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-bolt"></i> ENFORCERS</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-motorcycle"></i> OUTRIDERS</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-eye"></i> SENTINELS</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-hat-wizard"></i> PALADINS</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-cross"></i> CRUSADERS</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-ghost"></i> REVENANTS</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-infinity"></i> INVINCIBLES</h3><a href="#" class="join-btn">Join Now</a></div>
 
-    <section class="alliance-container">
-        <div class="alliance-card">
-            <h2>VANGUARDS</h2>
-            <p>Elite warriors of strategy and skill.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>ENFORCERS</h2>
-            <p>Defenders of justice and order.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>OUTRIDERS</h2>
-            <p>Fast-striking tactical masterminds.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>SENTINELS</h2>
-            <p>Guardians of power and wisdom.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>PALADINS</h2>
-            <p>Champions of honor and valor.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>CRUSADERS</h2>
-            <p>Fearless warriors of the battlefield.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>REVENANTS</h2>
-            <p>Unstoppable legends of the past.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>INVINCIBLES</h2>
-            <p>Dominating the game with strength.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>FIREHAWKS (Free Fire)</h2>
-            <p>Blazing through battles with precision.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>WARHOUNDS (BGMI)</h2>
-            <p>Masters of survival and combat.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>GLADIATORS (E-Football)</h2>
-            <p>Dominating the field with skill.</p>
-        </div>
-
-        <div class="alliance-card">
-            <h2>MASTERS (COC)</h2>
-            <p>Builders of mighty empires.</p>
-        </div>
-    </section>
+    <h2 class="game-category">🔥 Other Game Alliances</h2>
+    <div class="alliance-card"><h3><i class="fas fa-fire"></i> FIREHAWKS (Free Fire)</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-dog"></i> WARHOUNDS (BGMI)</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-chess-knight"></i> GLADIATORS (E-Football)</h3><a href="#" class="join-btn">Join Now</a></div>
+    <div class="alliance-card"><h3><i class="fas fa-crown"></i> MASTERS (COC)</h3><a href="#" class="join-btn">Join Now</a></div>
+</section>
 
 </body>
-</html>
+    </html>
