--- a/index.html
+++ b/index.html
@@ -97,11 +97,24 @@
         ❓ Got Questions? Visit Our FAQ
     </a>
     </div>
+<section class="youtube-videos">
+    <h2>Latest YouTube Videos</h2>
+    
+    <div class="video-container">
+        <!-- Replace VIDEO_ID with your actual YouTube video IDs -->
+        <iframe src="https://www.youtube.com/embed/ZmjOfImlxuQ?si=FtfLBWZH0DTu-Ted" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/fD92EwoqRaY?si=5HE5NS-5zjFYQK8U" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/EUap4vOeXO8?si=XsqJUEwGhE4StJjn" allowfullscreen></iframe>
+    </div>
 
-    <section id="youtube">
-        <h2>Latest YouTube Videos</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmjOfImlxuQ?si=PDqpynNLDSwGk0dZ" frameborder="0" allowfullscreen></iframe>
-    </section>
+    <!-- "View More" Button -->
+    <div class="view-more-container">
+        <a href="https://youtube.com/@strategic-heroes-oracles?si=_fDABwj8WiSXJ0eV" target="_blank" class="view-more-btn">
+            View More on YouTube
+        </a>
+    </div>
+</section>
+    
 
 <section id="sho-leaders">
     <h2>🏆 SHO Leadership Team</h2>
