--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
     <div class="video-container">
         <!-- Replace VIDEO_ID with your actual YouTube video IDs -->
         <iframe src="https://www.youtube.com/embed/8XWqj03tnYY" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/https:/7eFudj8yWNQ" allowfullscreen></iframe>
-        <iframe src="https://www.youtube.com/embed/https:/tPc3xHIah7E" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/7eFudj8yWNQ" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/tPc3xHIah7E" allowfullscreen></iframe>
     </div>
 
     <!-- "View More" Button -->
