--- a/alliances.html
+++ b/alliances.html
@@ -4,29 +4,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHO Alliances</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="alliance.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
 </head>
-<body>
-    <header>
-        <h1>Strategic Heroes Oracles - Alliances</h1>
-    </header><section class="alliance-container">
+<body><header>
+    <h1>Our Alliances</h1>
+    <p>Explore our elite alliances across multiple gaming platforms!</p>
+</header>
+
+<section class="alliances-grid">
+    <!-- Hitwicket Alliances -->
     <h2 class="game-category">🔥 Hitwicket Alliances</h2>
-    <div class="alliance-card"><h3><i class="fas fa-shield-alt"></i> VANGUARDS</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-bolt"></i> ENFORCERS</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-motorcycle"></i> OUTRIDERS</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-eye"></i> SENTINELS</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-hat-wizard"></i> PALADINS</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-cross"></i> CRUSADERS</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-ghost"></i> REVENANTS</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-infinity"></i> INVINCIBLES</h3><a href="#" class="join-btn">Join Now</a></div>
+    
+    <div class="alliance-card hitwicket"><img src="images/vanguards.png" alt="Vanguards"><h2>Vanguards</h2><p>Leading the charge in strategy and dominance.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card hitwicket"><img src="images/enforcers.png" alt="Enforcers"><h2>Enforcers</h2><p>Enforcing victory with unparalleled skill.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card hitwicket"><img src="images/outriders.png" alt="Outriders"><h2>Outriders</h2><p>Swift and strategic in every battle.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card hitwicket"><img src="images/sentinels.png" alt="Sentinels"><h2>Sentinels</h2><p>Guardians of our legacy, unshakable and strong.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card hitwicket"><img src="images/paladins.png" alt="Paladins"><h2>Paladins</h2><p>Chivalrous warriors fighting for victory.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card hitwicket"><img src="images/crusaders.png" alt="Crusaders"><h2>Crusaders</h2><p>Fearless in battle, relentless in pursuit.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card hitwicket"><img src="images/revenants.png" alt="Revenants"><h2>Revenants</h2><p>Unstoppable forces, rising from every defeat.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card hitwicket"><img src="images/invincibles.png" alt="Invincibles"><h2>Invincibles</h2><p>Unbeatable and unmatched in skill.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
 
     <h2 class="game-category">🔥 Other Game Alliances</h2>
-    <div class="alliance-card"><h3><i class="fas fa-fire"></i> FIREHAWKS (Free Fire)</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-dog"></i> WARHOUNDS (BGMI)</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-chess-knight"></i> GLADIATORS (E-Football)</h3><a href="#" class="join-btn">Join Now</a></div>
-    <div class="alliance-card"><h3><i class="fas fa-crown"></i> MASTERS (COC)</h3><a href="#" class="join-btn">Join Now</a></div>
+    
+    <div class="alliance-card freefire"><img src="images/firehawks.png" alt="Firehawks"><h2>Firehawks</h2><p>Blazing through battles in Free Fire.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card bgmi"><img src="images/warhounds.png" alt="Warhounds"><h2>Warhounds</h2><p>Fearless hunters dominating BGMI.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card efootball"><img src="images/gladiators.png" alt="Gladiators"><h2>Gladiators</h2><p>Fierce warriors of the football arena.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
+    <div class="alliance-card coc"><img src="images/masters.png" alt="Masters"><h2>Masters</h2><p>Commanders of Clash of Clans, ruling the game.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
 </section>
 
 </body>
-    </html>
+                                                                                                                                                                                                              </html>
