--- a/alliances.html
+++ b/alliances.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body><header>
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="alliances.html" class="active">Alliances</a></li>
+            <li><a href="tournaments.html">Tournaments</a></li>
+            <li><a href="news.html">News</a></li>
+            <li><a href="recruitment.html">Recruitment</a></li>
+            <li><a href="faq.html">FAQ</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
     <h1>Our Alliances</h1>
     <p>Explore our elite alliances across multiple gaming platforms!</p>
 </header>
@@ -32,4 +43,4 @@
 </section>
 
 </body>
-                                                                                                                                                                                                              </html>
+    </html>
