--- a/alliances.html
+++ b/alliances.html
@@ -44,6 +44,6 @@
     <div class="alliance-card efootball"><img src="images/gladiators.png" alt="Gladiators"><h2>Gladiators</h2><p>Fierce warriors of the football arena.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
     <div class="alliance-card coc"><img src="images/masters.png" alt="Masters"><h2>Masters</h2><p>Commanders of Clash of Clans, ruling the game.</p><a href="recruitment.html" class="join-btn">Join Now</a></div>
 </section>
-
+<script src="script.js" defer></script>
 </body>
     </html>
