--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
   <!-- Navigation Container -->
   <div class="nav-container">
-      <div class="logo">
+      <div class="logo" class="hidden from-left">
         <img src="images/sho-logo.png" alt="SHO Logo">
       </div>
     <!-- SHO Title (Optional) -->
@@ -25,7 +25,7 @@
       
 
 
-        <nav class="navbar">
+        <nav class="navbar" class="hidden from-right">
         <button class="side-menu-btn" onclick="toggleSideMenu()">☰ Menu</button>
         <div id="side-menu" class="side-menu">
             <a href="javascript:void(0)" class="close-btn" onclick="toggleSideMenu()">×</a>
@@ -51,26 +51,26 @@
 </script>
 <section id="about" class="about-section">
     <div class="container">
-        <h2>About Strategic Heroes Oracles (SHO)</h2>
-        <p> Strategic Heroes Oracles (SHO) is a community of elite gamers united by strategy, skill, and teamwork. Founded with a vision to dominate in multiple gaming worlds, SHO has grown into a powerhouse across various competitive games.</p>
+        <h2 class="hidden from-bottom">About Strategic Heroes Oracles (SHO)</h2>
+        <p class="hidden from-bottom"> Strategic Heroes Oracles (SHO) is a community of elite gamers united by strategy, skill, and teamwork. Founded with a vision to dominate in multiple gaming worlds, SHO has grown into a powerhouse across various competitive games.</p>
         
-        <h3>Who We Are?</h3>
-        <ul>
+        <h3 class="hidden from-left">Who We Are?</h3>
+        <ul class="hidden from-right">
             <li>🔥 A top-tier alliance in multiple strategy and esports games.</li>
             <li>🔥 A community of passionate gamers, strategists, and champions .</li>
             <li>🔥 A home for friendly competition, tournaments, and exclusive events.</li>
         </ul>
 
-        <h3>What We Do?</h3>
-        <ul>
+        <h3 class="hidden from-left">What We Do?</h3>
+        <ul class="hidden from-right">
             <li>🎮 Compete in Hitwicket, Free Fire, BGMI, eFootball, and more.</li>
             <li>🏆 Host tournaments, PvP battles, and alliance championships.</li>
             <li>📢 Share game guides, tips, and live gameplay on YouTube.</li>
             <li>🚀 Recruit and train the best players to join our ranks.</li>
         </ul>
 
-        <h3>Why Join SHO?</h3>
-        <ul>
+        <h3 class="hidden from-left">Why Join SHO?</h3>
+        <ul class="hidden from-right">
             <li>✔ Be part of a strong and supportive alliance.</li>
             <li>✔ Participate in exclusive in-game events and challenges .</li>
             <li>✔ Get recognized as one of the best in competitive gaming .</li>
