--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
   <!-- Navigation Container -->
   <div class="nav-container">
-      <div class="logo" hidden from-left">
+      <div class="logo hidden from-left">
         <img src="images/sho-logo.png" alt="SHO Logo">
       </div>
     <!-- SHO Title (Optional) -->
@@ -25,7 +25,7 @@
       
 
 
-        <nav class="navbar" hidden from-right">
+        <nav class="navbar hidden from-right">
         <button class="side-menu-btn" onclick="toggleSideMenu()">☰ Menu</button>
         <div id="side-menu" class="side-menu">
             <a href="javascript:void(0)" class="close-btn" onclick="toggleSideMenu()">×</a>
