--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       
 
 
-        <nav class="navbar hidden from-right">
+        <nav class="navbar">
         <button class="side-menu-btn" onclick="toggleSideMenu()">☰ Menu</button>
         <div id="side-menu" class="side-menu">
             <a href="javascript:void(0)" class="close-btn" onclick="toggleSideMenu()">×</a>
