--- a/index.html
+++ b/index.html
@@ -263,5 +263,6 @@
         }, 800); // Redirects after scrolling
     });
 </script>
+    <script src="script.js" defer></script>
 </body>
 </html>
