--- a/recruitment.html
+++ b/recruitment.html
@@ -1,68 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html><html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SHO Recruitment</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
+    <header class="recruitment-header">
+        <h1>Join Strategic Heroes Oracles</h1>
+        <p>Be part of the best alliances in Hitwicket, Free Fire, BGMI, and more!</p>
+        <a href="https://chat.whatsapp.com/LhcHMHO6jee5g0dKF2aQwi" class="whatsapp-btn">Join on WhatsApp</a>
+        <a href="alliances.html" class="explore-btn">Explore Our Alliances</a>
+    </header><section class="recruitment-benefits">
+    <h2>Why Join Us?</h2>
+    <div class="benefits-grid">
+        <div class="benefit-item">🔥 Competitive PvP & Tournaments</div>
+        <div class="benefit-item">🎯 Strategy-Based Training</div>
+        <div class="benefit-item">🏆 Exclusive Alliance Perks</div>
+        <div class="benefit-item">🤝 Teamwork & Collaboration</div>
+    </div>
+</section>
 
-    <header>
-        <h1>Join the SHO Alliance</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="alliances.html">Alliances</a></li>
-                <li><a href="tournaments.html">Tournaments</a></li>
-                <li><a href="news.html">News</a></li>
-                <li><a href="recruitment.html">Recruitment</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<section class="recruitment-form">
+    <h2>Apply to Join SHO</h2>
+    <form action="#" method="POST">
+        <input type="text" name="name" placeholder="Your In-Game Name" required>
+        <select name="alliance">
+            <option value="vanguards">Vanguards</option>
+            <option value="enforcers">Enforcers</option>
+            <option value="outriders">Outriders</option>
+            <option value="sentinels">Sentinels</option>
+            <option value="paladins">Paladins</option>
+            <option value="crusaders">Crusaders</option>
+        </select>
+        <textarea name="message" placeholder="Why do you want to join?" required></textarea>
+        <button type="submit">Submit Application</button>
+    </form>
+</section>
 
-    <section>
-        <h2>How to Join?</h2>
-        <p>We are always looking for skilled and passionate players to join our alliances. Follow these steps to apply:</p>
-        <ol>
-            <li>Choose the alliance that fits your gameplay style.</li>
-            <li>Fill out the recruitment form below.</li>
-            <li>Our admins will review your application and contact you.</li>
-        </ol>
-
-        <h2>Apply Now</h2>
-        <form action="https://formspree.io/f/{your_form_id}" method="POST">
-            <label for="name">Name (In-Game):</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="game">Game You Play:</label>
-            <select id="game" name="game">
-                <option value="Hitwicket">Hitwicket</option>
-                <option value="Cricket League">Cricket League</option>
-                <option value="Free Fire">Free Fire</option>
-                <option value="eFootball">eFootball</option>
-                <option value="BGMI">BGMI</option>
-                <option value="Other">Other</option>
-            </select>
-
-            <label for="experience">Experience Level:</label>
-            <select id="experience" name="experience">
-                <option value="Beginner">Beginner</option>
-                <option value="Intermediate">Intermediate</option>
-                <option value="Pro">Pro</option>
-            </select>
-
-            <label for="reason">Why Do You Want to Join?</label>
-            <textarea id="reason" name="reason" required></textarea>
-
-            <button type="submit">Submit Application</button>
-        </form>
-    </section>
-
-    <footer>
-        <p>&copy; 2025 SHO Alliance. All rights reserved.</p>
-    </footer>
+<footer>
+    <p>© 2025 SHO Alliances. All rights reserved.</p>
+</footer>
 
 </body>
-                                                     </html>
+    </html>
