--- a/faq.html
+++ b/faq.html
@@ -21,7 +21,7 @@
         <img src="images/sho-logo.png" alt="SHO Logo">
       </div>
     <!-- SHO Title (Optional) -->
-    <h1 class="sho-heading">Strategic Heroes Oracles</h1>
+    <h1 class="sho-heading">||SHO|| FAQ</h1>
 
     <!-- Navbar -->
     
