--- a/alliances.html
+++ b/alliances.html
@@ -14,7 +14,7 @@
         <img src="images/sho-logo.png" alt="SHO Logo">
       </div>
     <!-- SHO Title (Optional) -->
-    <h1 class="sho-heading">ALLIANCES</h1>
+    <h1 class="sho-heading">||SHO|| ALLIANCES</h1>
 
     <!-- Navbar -->
     
