--- a/recruitment.html
+++ b/recruitment.html
@@ -14,7 +14,7 @@
         <img src="images/sho-logo.png" alt="SHO Logo">
       </div>
     <!-- SHO Title (Optional) -->
-    <h1 class="sho-heading">||SHO|| RECRUITMENT</h1>
+    <h1 class="sho-heading">JOIN ||SHO||</h1>
 
     <!-- Navbar -->
     
