--- a/recruitment.html
+++ b/recruitment.html
@@ -39,12 +39,12 @@
     
   </div>
     </header>
-    <header class="recruitment-header">
+    <h1 class="recruitment-header">
         <h1>Join Strategic Heroes Oracles</h1>
         <p>Be part of the best alliances in Hitwicket, Free Fire, BGMI, and more!</p>
         <a href="https://chat.whatsapp.com/LhcHMHO6jee5g0dKF2aQwi" class="whatsapp-btn">Join on WhatsApp</a>
         <a href="alliances.html" class="explore-btn">Explore Our Alliances</a>
-    </header><section class="recruitment-benefits">
+    </h1><section class="recruitment-benefits">
     <h2>Why Join Us?</h2>
     <div class="benefits-grid">
         <div class="benefit-item">🔥 Competitive PvP & Tournaments</div>
